add nodemon, add client side fetch for folders and urls

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <form class='add-url-form'>
         <input placeholder='add url' class='url-input'/>
         <button class='button add-url-button'>Submit</button>
-        <section class='url-list'></section>
+        <ul class='url-list'></ul>
       </form>
     </section>
   </body>
