--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,10 @@
       <form class='add-url-form'>
         <input placeholder='add url' class='url-input'/>
         <button class='button add-url-button'>Submit</button>
-        <ul class='url-list'></ul>
       </form>
+      <button class='sort-popularity-button'>Popularity</button>
+      <button class='sort-date-button'>Date</button>
+      <ul class='url-list'></ul>
     </section>
   </body>
   <script
