--- a/public/browser-test/test.html
+++ b/public/browser-test/test.html
@@ -12,7 +12,7 @@
    <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
 
    <script>mocha.setup('bdd')</script>
-   <script src='../../jet-fuel/public/app.js'></script>
+   <script src='../app.js'></script>
    <script src="./folders.js"></script>
    <script src="./test.js"></script>
    <script>
