--- a/public/browser-test/test.html
+++ b/public/browser-test/test.html
@@ -14,6 +14,7 @@
    <script>mocha.setup('bdd')</script>
    <script src='../app.js'></script>
    <script src="./folders.js"></script>
+   <script src="./url.js"></script>
    <script>
      mocha.checkLeaks();
      mocha.globals(['jQuery']);
